[project]
name = "z-image-power-nodes"
description = "A set of ComfyUI nodes designed specifically for the Z-Image / Z-Image-Turbo models. Pushing the best image generation model to its limits!"
version = "2.0.0"
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/martin-rizzo/ComfyUI-ZImagePowerNodes"
Documentation = "https://martin-rizzo.github.io/ComfyUI-ZImagePowerNodes"

[tool.comfy]
PublisherId = "martin-rizzo"
DisplayName = "Z-Image Power Nodes"
Icon = "https://raw.githubusercontent.com/martin-rizzo/ComfyUI-ZImagePowerNodes/master/icon2.jpg"
requires-comfyui = ">=0.8.0"
